--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 # --- Basic options --- #
 
 # Name of website
-title: My website
+title: Musings and Learnings
 
 # Short description of your site
-description: A virtual proof that I'm awesome
+description: Soaking my mind
 
 # Your name to show in the footer
-author: Some Person
+author: M. D. Mufambisi
 
 # --- List of links in the navigation bar --- #
 
@@ -38,10 +38,10 @@ round-avatar: true
 # Uncomment the links you want to show and add your information to each one.
 # If you don't want to show a link to an RSS feed, set rss to "false".
 social-network-links:
-  email: "someone@example.com"
+  email: "mufambisi@gmail.com"
   facebook: deanattali
-  github: daattali
-  twitter: daattali
+  github: mufambisi
+  twitter: mufambisi
   rss: true
 #  reddit: yourname
 #  linkedin: daattali
@@ -72,7 +72,7 @@ share-links-active:
 
 # How to display the link to your website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "MyWebsite.com"
+url-pretty: "mufambisi.com"
 
 # Create a "tags" index page and make tags on each post clickable
 link-tags: true
