--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ navbar-links:
   Resources:
     - Beautiful Jekyll: "https://beautifuljekyll.com"
     - Learn markdown: "https://www.markdowntutorial.com/"
-  Author's home: "https://deanattali.com"
+  Author's home: "https://mufambisi.com"
 
 # --- Logo --- #
 
@@ -39,12 +39,11 @@ round-avatar: true
 # If you don't want to show a link to an RSS feed, set rss to "false".
 social-network-links:
   email: "mufambisi@gmail.com"
-  facebook: deanattali
   github: mufambisi
   twitter: mufambisi
-  rss: true
+  rss: false
 #  reddit: yourname
-#  linkedin: daattali
+  linkedin: munyaradzi-d-mufambisi
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
